apps/base/matrix/integrations-synapse/synapse/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: integrations-synapse
  namespace: app-matrix
spec:
  entryPoints:
    - tunnel
  routes:
    - match: Host(`integrations.borooka.ee`) && PathPrefix(`/_meowlnir/`)
      kind: Rule
      priority: 10
      services:
        - name: integrations-meowlnir
          port: 29339
    - match: Host(`integrations.borooka.ee`)
      kind: Rule
      priority: 1
      middlewares:
        - name: integrations-synapse-buffering
          namespace: app-matrix
      services:
        - name: integrations-synapse
          port: 8008
          serversTransport: integrations-synapse-transport
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: integrations-synapse-buffering
  namespace: app-matrix
spec:
  buffering:
    maxRequestBodyBytes: 52428800
    memRequestBodyBytes: 1048576
